# sii-exercise

./: .gitignore  cli.py  config-schema.yml  config.yml  pyproject.toml
exercise/: cli.py  element.py
src/excercise/: cli.py  element.py
tests/: test_cli.py  test_element.py
tests/test_files/: config.yml  schema.yml  wrong-config.yml
