[tool.poetry]
name = "exercise"
version = "0.1.0"
description = ""
authors = ["Piotr Tutak <ptutak@sii.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
Cerberus = "^1.3.3"
click = "^7.1.2"
pyaml = "^20.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.0"
flake8-black = "^0.2.1"
isort = "^5.8.0"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = True

[tox:.package]
basepython = python3

[testenv]
commands =
    poetry install
    pytest

[testenv:lint]
basepython = python3
commands = flake8 exercise
"""
